test/errhandling/ferguson/throw-shared.good
throw-shared.chpl:1: In function 'foo':
throw-shared.chpl:3: error: only owned Errors can be thrown
